# notion-companion

./: .env.example  .gitignore  CLAUDE.md  CONTEXTUAL_RAG_IMPLEMENTATION.md  Makefile  README.md  TESTING.md  jest.config.js  jest.polyfills.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_tests.py  start.py  test-setup.ts  vitest.config.ts
.claude/agents/: context-initializer.md  execution-verifier.md  executor.md  finalizer.md  memory-writer.md  planner.md  requirement-verifier.md  system-planner.md  task-executor.md  verifier.md
.claude/commands/: execute.md  finalize.md  plan.md  verify.md
.cursor/rules/: architecture-patterns.mdc  context-initializer.mdc  development-workflow.mdc  environment-setup.mdc  execution-verifier.mdc  llm-configuration.mdc  memory-writer.mdc  project-overview.mdc  (+5 more)
MEMORY/: HUMANREADME.md  INDEX.md  changelog.md  engineering.md  product.md
__mocks__/: msw.js  supabase.js
api/: __init__.py  main.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  CHAT_SESSIONS_SETUP.md  additional_schema.sql  chat_sessions_schema.sql  database.py  database_v3.py  drop_schema.sql  logging_config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_tests.py  schema.sql  schema_v3_simplified.sql  start.py  sync_notion_databases.sh  test_contextual_rag.py
backend/config/: databases.toml  model_config.py  models.toml
backend/docs/: DATA_INGESTION_PIPELINE.md  RAG_IMPROVEMENT_ROADMAP.md  SCHEMA_DEPLOYMENT_TODO.md  SESSION_SUMMARY.md  TESTING_BEST_PRACTICES.md
backend/routers/: bootstrap.py  chat.py  chat_sessions.py  logs.py  metadata.py  notion_webhook.py  search.py
backend/scripts/: README.md  check_active_databases.py  model_config_demo.py  sync_databases.py  sync_databases_v3.py  test_ingestion.py  test_v3_ingestion.py
backend/services/: chat_session_service.py  chunking_strategies.py  content_type_detector.py  contextual_chunker.py  contextual_search_engine.py  database_schema_manager.py  document_processor.py  notion_service.py  openai_service.py  rag_search_service.py
backend/tests/: conftest.py
backend/tests/api/: test_chat_endpoints.py  test_metadata_filtering.py  test_search_endpoints.py
backend/tests/integration/: test_database_operations.py  test_metadata_filtering_integration.py
backend/tests/unit/models/: test_metadata_models.py
backend/tests/unit/services/: test_database.py  test_database_schema_manager.py  test_notion_service.py  test_openai_service.py
backend_tests/: __init__.py
components/: auth-dialog.tsx  chat-filter-bar.tsx  chat-interface.tsx  dashboard-home.tsx  debug-logs.tsx  dynamic-filter-section.tsx  header.tsx  loading-screen.tsx  message-citations.tsx  recent-chats.tsx  sidebar.tsx  token-usage-indicator.tsx  welcome-screen.tsx  workspace-list.tsx
docs/: COMPLEX_FILTERING_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DYNAMIC_FILTER_IMPLEMENTATION.md  MANUAL_METADATA_DEFINITION.md  METADATA_FILTERING_IMPLEMENTATION.md  METADATA_FILTERING_SYSTEM.md  NOTION_API_SCHEMA_ANALYSIS.md  RAG_IMPROVEMENT_ROADMAP.md  README.md  TESTING_STATUS_AND_ROADMAP.md  TODO.md
evaluation/: CACHING_IMPLEMENTATION_SUMMARY.md  EVALUATION_SYSTEM_ARCHITECTURE.md  README.md  README_MULTILINGUAL_CHUNKER.md  __init__.py
hooks/: use-analytics.ts  use-auth.ts  use-chat-sessions.ts  use-metadata.ts  use-notion-connection.ts  use-notion-databases.ts  use-session-lifecycle.ts  use-workspaces.ts
ingestion/: __init__.py  factory.py  interface.py
lib/: api.ts  frontend-error-logger.ts  logger.ts  metadata-api.ts  openai.ts  supabase.ts
rag/: __init__.py  factory.py  interface.py
scripts/: pre-commit-test.sh
shared/: __init__.py
storage/: __init__.py  database.py  database_schema_manager.py  interface.py
types/: chat.ts
(+149 files in other folders)
