[project]
name = "notion-companion-backend"
version = "0.1.0"
description = "Backend API for Notion Companion RAG application"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "httpx",
    "python-multipart",
    "click",
    "h11",
    "starlette",
    "tiktoken",
    "supabase",
    "openai",
    "notion-client",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "respx",
    "coverage",
    "trio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--disable-warnings"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "api: API tests",
    "slow: Slow running tests"
]
